--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,14 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module">
+      window.MyConfig = {
+        VITE_MY_EMAIL: `${import.meta.env.VITE_MY_EMAIL}`,
+        VITE_YOUR_SERVICE_ID: `${import.meta.env.VITE_YOUR_SERVICE_ID}`,
+        VITE_YOUR_TEMPLATE_ID: `${import.meta.env.VITE_YOUR_TEMPLATE_ID}`,
+        VITE_YOUR_USER_ID: `${import.meta.env.VITE_YOUR_USER_ID}`,
+      };
+    </script>
     <script type="module" src="/src/main.jsx"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
